tests/paczka1/fuzzy1/62725829.err
Error in line 9: PCV A66 24,6
Error in line 2: A66 S396 12,5
Error in line 12: PCV A847 18,5
Error in line 10: sVUghEjxSAX S396 16,2
Error in line 15: E2FMmMI A263 79,9
Error in line 35: EfFFZLBb5iV A66 7|,5
Error in line 34: 6N5 A66 56,8
